# vuv-libs-analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: default_config.json
docs/: app-functions.md  architecture.md
sample-data/: 10us_10meas_05_Al_30mJ_Ar_1atm.csv
src/: app.py  app2.py  dark.py  mapping.py  spectrum.py  wav_cal.py
src/config/: calibration_points_default0.csv  dark_frame_default.csv
src/vuv_analyzer/: __init__.py  app.py  dark.py  launch.py  mapping.py  regres.py  spectrum.py  wav_cal.py
src/vuv_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/vuv_analyzer/config/: calibration_curve_data.csv  calibration_points_default0.csv  dark_frame_default.csv
src/vuv_analyzer/core/: __init__.py  config.py  export.py  ham_reader.py  loading.py  pix2wav.py  processing.py
src/vuv_analyzer/sample-data/: 10us_30meas_05_Al_alloy_30mJ_Ar_1020mbar.csv  cu_1shot.csv
src/vuv_analyzer/ui/: __init__.py  plots.py
tests/: Process_2025-11-04_data_export.ipynb  Process_2026-01-14_teeth_map.ipynb  test_ham_reader.ipynb  test_ham_reader.py
