[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuv-analyzer"
version = "0.4.2"
description = "VUV analyzer package"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "plotly",
    "streamlit",
    "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
vuv_analyzer = ["assets/*.png", "config/*.csv", "sample-data/*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vuv_analyzer = "vuv_analyzer.launch:main"
